--- a/package.json
+++ b/package.json
@@ -29,17 +29,21 @@
   "devDependencies": {
     "bower": "^1.6.5",
     "browser-sync": "^2.9.11",
+    "coveralls": "^2.11.4",
     "debug": "^2.2.0",
+    "expect.js": "^0.3.1",
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.2.0",
     "istanbul": "^0.4.0",
+    "mocha-lcov-reporter": "^1.0.0",
     "muk": "^0.4.0",
     "rewire": "^2.5.0",
     "should": "^7.1.1",
     "should-promised": "^0.3.1",
     "supertest": "^1.1.0",
-    "supervisor": "^0.9.1"
+    "supervisor": "^0.9.1",
+    "travis-cov": "^0.2.5"
   },
   "dependencies": {
     "bluebird": "^3.0.5",
