--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "bugs": {
     "url": "https://github.com/glabcn/glab-core/issues"
   },
-  "contributors": ["https://github.com/glabcn/glab-core/graphs/contributors"],
+  "contributors": [
+    "https://github.com/glabcn/glab-core/graphs/contributors"
+  ],
   "homepage": "http://www.glab.cn",
   "engines": {
     "node": ">= 0.10.0"
@@ -34,7 +36,9 @@
     "expect.js": "^0.3.1",
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
     "gulp-mocha": "^2.2.0",
+    "gulp-util": "^3.0.7",
     "istanbul": "^0.4.0",
     "mocha-lcov-reporter": "^1.0.0",
     "muk": "^0.4.0",
