--- a/package.json
+++ b/package.json
@@ -37,16 +37,21 @@
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-util": "^3.0.7",
     "istanbul": "^0.4.0",
+    "jshint-stylish": "^2.1.0",
     "mocha-lcov-reporter": "^1.0.0",
     "muk": "^0.4.0",
+    "require-dir": "^0.3.0",
     "rewire": "^2.5.0",
     "should": "^7.1.1",
     "should-promised": "^0.3.1",
     "supertest": "^1.1.0",
     "supervisor": "^0.9.1",
+    "through": "^2.3.8",
     "travis-cov": "^0.2.5"
   },
   "dependencies": {
