--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
+    "gulp-csslint": "^0.2.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-util": "^3.0.7",
