--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-coffee": "^2.3.1",
     "gulp-csslint": "^0.2.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.0.5",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-mocha": "^2.2.0",
