--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-csslint": "^0.2.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "istanbul": "^0.4.0",
     "jshint-stylish": "^2.1.0",
