--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.2.3",
     "bower": "^1.6.5",
     "browser-sync": "^2.9.11",
     "coveralls": "^2.11.4",
@@ -45,6 +46,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-px3rem": "^0.2.2",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "istanbul": "^0.4.0",
@@ -58,7 +60,8 @@
     "supertest": "^1.1.0",
     "supervisor": "^0.9.1",
     "through": "^2.3.8",
-    "travis-cov": "^0.2.5"
+    "travis-cov": "^0.2.5",
+    "webpack": "^1.12.9"
   },
   "dependencies": {
     "bluebird": "^3.0.5",
