--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-postcss": "^6.0.1",
     "gulp-px3rem": "^0.2.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "istanbul": "^0.4.0",
