--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-px3rem": "^0.2.2",
+    "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
