--- a/package.json
+++ b/package.json
@@ -64,7 +64,14 @@
     "supervisor": "^0.9.1",
     "through": "^2.3.8",
     "travis-cov": "^0.2.5",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "angular2": "2.0.0-beta.0",
+    "systemjs": "0.19.6",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "zone.js": "0.5.10"
   },
   "dependencies": {
     "bluebird": "^3.0.5",
