--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "angular2": "2.0.0-beta.0",
     "autoprefixer": "^6.2.3",
+    "babel-preset-es2015": "^6.3.13",
     "bower": "^1.6.5",
     "browser-sync": "^2.9.11",
     "coveralls": "^2.11.4",
     "debug": "^2.2.0",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
     "expect.js": "^0.3.1",
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-csslint": "^0.2.0",
@@ -56,21 +61,18 @@
     "jshint-stylish": "^2.1.0",
     "mocha-lcov-reporter": "^1.0.0",
     "muk": "^0.4.0",
+    "reflect-metadata": "0.1.2",
     "require-dir": "^0.3.0",
     "rewire": "^2.5.0",
+    "rxjs": "5.0.0-beta.0",
     "should": "^7.1.1",
     "should-promised": "^0.3.1",
     "supertest": "^1.1.0",
     "supervisor": "^0.9.1",
+    "systemjs": "0.19.6",
     "through": "^2.3.8",
     "travis-cov": "^0.2.5",
     "webpack": "^1.12.9",
-    "angular2": "2.0.0-beta.0",
-    "systemjs": "0.19.6",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
   },
   "dependencies": {
