--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "nodemailer": "^2.0.0",
     "rx": "^4.0.7",
     "serve-favicon": "^2.3.0",
+    "socket.io": "^1.4.5",
     "walkway.js": "0.0.5",
     "winston": "^2.1.0"
   }
