--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expect.js": "^0.3.1",
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
+    "gulp-apidoc": "^0.2.2",
     "gulp-babel": "^6.1.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
