--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.5",
     "walkway.js": "0.0.5",
+    "wechat": "^2.0.3",
     "weui": "^0.3.0",
     "winston": "^2.1.0"
   }
