--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular2": "2.0.0-beta.0",
     "autoprefixer": "^6.2.3",
     "babel-preset-es2015": "^6.3.13",
+    "babelify": "7.2.0",
     "bower": "^1.6.5",
     "browser-sync": "^2.9.11",
     "coveralls": "^2.11.4",
