--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "glab",
   "version": "0.0.1",
-  "description": "just a personal web",
+  "description": "web navigation",
   "main": "app.js",
   "scripts": {
     "test": "make test-all",
